[package]
name = "xkb-parser"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "Readme.md"
description = "Parses `.xkb` (X keyboard extension) files"
repository = "https://github.com/divvun/xkb-parser"

[dependencies]
pest = { version = "2.7.5", features = [ "pretty-print" ] }
pest_derive = "2.7.5"
pest-ast = "0.3.4"
from-pest = "0.3.2"
derivative = "2.2.0"
log = "0.4.20"
shrinkwraprs = "0.3.0"

[dev-dependencies]
env_logger = "0.10.1"
rayon = "1.8.0"
walkdir = "2.4.0"

[workspace]
members = [
    ".",
    "x11-keysymdef",
]
